--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@deepgram/sdk": "^3.3.0",
+    "@deepgram/sdk": "^3.8.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cross-fetch": "^4.0.0",
     "groq-sdk": "^0.4.0",
     "lucide-react": "^0.379.0",
     "next": "^14.2.15",
